--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "t_deps/modules/test-moremore"]
 	path = t_deps/modules/test-moremore
-	url = git://github.com/wakaba/perl-test-moremore
+	url = https://github.com/wakaba/perl-test-moremore
